--- a/resources/style.css
+++ b/resources/style.css
@@ -95,6 +95,12 @@ body{
     background: #2980B9;
     box-shadow: none;
 }
+#inProgress{
+	padding : 0px;
+	font-size: 12px;
+	color : #353E49;
+	text-align : center;
+}
 #Jumbotron-experience{
     padding: 40px;
         padding-top: 60px;
@@ -221,28 +227,28 @@ body{
 	border-radius: 50%;
 	position: relative;
 	cursor: default;
-	box-shadow: 
+	box-shadow:
 		inset 0 0 0 0 rgba(241, 196, 15, 0.4),
 		inset 0 0 0 16px rgba(255,255,255,0.6),
 		0 1px 2px rgba(0,0,0,0.1);
 	transition: all 0.4s ease-in-out;
 }
 
-.ch-img-1 { 
+.ch-img-1 {
 	background-image: url(../resources/Images/Squart.png);
     background-size: 220px;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.ch-img-2 { 
+.ch-img-2 {
 	background-image: url(../resources/Images/lcomlocal2.png);
     background-size: 350px;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.ch-img-3 { 
+.ch-img-3 {
 	background-image: url(../resources/Images/twelvelight2.png);
     background-size: 300px;
     background-repeat: no-repeat;
@@ -271,8 +277,8 @@ body{
 	padding: 65px 0 0 0;
 	height: 110px;
 	font-family: 'Open Sans', Arial, sans-serif;
-	text-shadow: 
-		0 0 1px #fff, 
+	text-shadow:
+		0 0 1px #fff,
 		0 1px 2px rgba(0,0,0,0.3);
 }
 
@@ -303,7 +309,7 @@ body{
 
 
 .ch-item:hover {
-	box-shadow: 
+	box-shadow:
 		inset 0 0 0 110px rgba(52, 152, 219, 0.8),
 		inset 0 0 0 16px rgba(255,255,255,0.8),
 		0 1px 2px rgba(0,0,0,0.1);
@@ -311,7 +317,7 @@ body{
 
 .ch-item:hover .ch-info {
 	opacity: 1;
-	transform: scale(1);	
+	transform: scale(1);
 }
 
 /*---------------------------------------------------------------------*/
