--- a/resources/style.css
+++ b/resources/style.css
@@ -253,6 +253,13 @@ body{
     background-position: center;
 }
 
+.ch-img-4 {
+	background-image: url(../resources/Images/adenatis.png);
+    background-size: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
