--- a/beta/resources/scss/modules/_portfolio.scss
+++ b/beta/resources/scss/modules/_portfolio.scss
@@ -8,3 +8,15 @@
         }
     }
 }
+@media only screen and (max-width : 635px) {
+    .ui.text.container{
+        .ui.link.cards{
+            &.portfolio-cards {
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 290px;
+            }
+        }
+    }
+
+}
