--- a/beta/resources/scss/modules/_ui-experience-grid.scss
+++ b/beta/resources/scss/modules/_ui-experience-grid.scss
@@ -26,6 +26,8 @@
         &.custom-grid-experience {
             margin-top: 20px;
             color: $experience-color;
+            margin-left: 1px;
+            margin-right: 1px;
             background-color: $experience-bg;
         }
         .ten.wide.column{
@@ -62,6 +64,14 @@
 
 
 @media only screen and (min-width : 768px) {
+    .ui.text.container{
+        .ui.grid{
+            &.custom-grid-experience {
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
+    }
     .ten.wide.column{
         &.custom-column-experience {
             padding-bottom: 15px;
