--- a/resources/scss/base/_default.scss
+++ b/resources/scss/base/_default.scss
@@ -32,3 +32,8 @@ a {
 	text-align: center;
 	margin-top: 2em;
 }
+
+@font-face {
+    font-family: 'batmanFont';
+    src: url('./fonts/batman.ttf');
+}
