--- a/resources/scss/modules/_hobbies-like.scss
+++ b/resources/scss/modules/_hobbies-like.scss
@@ -17,6 +17,20 @@
                 margin-top: 10px;
             }
         }
+        span.batmanIcon {
+            font-family: "batmanFont";
+            font-size: 1.5em;
+            border-radius: 50%;
+            padding: 0.25em;
+            box-shadow: 0 0 0 .1em rgba(0,0,0,.1) inset;
+            width: 2em;
+            height: 2em;
+            background-color: #1b1c1d;
+            color: #fff;
+            margin-bottom: 10px;
+            margin-top: 10px;
+            display: inline-block;
+        }
         h3.hobbies-quotes-title {
             margin: 0;
             border-bottom: 1px solid;
