--- a/resources/scss/theme/_theme.scss
+++ b/resources/scss/theme/_theme.scss
@@ -63,8 +63,9 @@ $experience-title: $flat-whiteCloud;
 $experience-color: $awesome-white;
 $experience-bg: $flat-blueWhale;
 $experience-job-title: $flat-black;
+$experience-job-type: $pomegranate;
 $experience-border-color: $flat-graySmoke ;
-$experience-date-bg: $flat-orange;
+$experience-date-bg: $red;
 
 /* UI Timeline Education background  color */
 $timeline-text-color: $flat-black;
