--- a/resources/scss/modules/_navigationMenu.scss
+++ b/resources/scss/modules/_navigationMenu.scss
@@ -2,12 +2,9 @@
 
 .headerNav {
 	background: $navbar-bg;
-	line-height: 48px;
-	box-shadow: 0 -7px 0 darken($navbar-bg, 10%) inset;
-}
-
-h2.logo {
-    padding-top: 8px;
+	height: 60px;
+    position: fixed;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -31,15 +28,13 @@ h2.logo {
 /* Mobile menu */
 #menu-icon {
 	display: block;
-	position: absolute;
-	top: 0;
-	right: 1em;
+	font-size: 2.5rem;
 	color: $navigation-color;
 	text-decoration: none;
 	font-weight: bold;
 	cursor: pointer;
 	opacity: 1;
-	padding: 0 0.4em;
+	padding: 0 .5em;
 
 	&:hover {
 		opacity: 0.85;
@@ -48,41 +43,48 @@ h2.logo {
 	}
 }
 
+.navigation-bar {
+	height: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
 .navbar {
 	background-color: $navbar-bg;
-	float: none;
-	max-height: 0;
-	margin-top: 15px;
+	height: 0;
 	overflow-y: scroll;
 	@include transition(max-height .4s);
-
+	&.active {
+		height: 300px;
+		border-top: 1px solid #e7e7e7;
+    	border-bottom: 1px solid #e7e7e7;
+	}
 	.menu {
 		margin: 0;
 		padding: 0;
 		list-style-type: none;
-
 		li {
 			list-style-type: none;
 			display: block;
+			text-transform: uppercase;
 			&.language-responsive-button {
 				display: block;
 			}
 			a {
 				display: block;
+				height: 50px;
+    			padding: 15px;
 				text-decoration: none;
 				color: $navigation-color;
-				padding: 0 0.8em;
 				@include transition(all 0.2s ease);
-				border-bottom: 1px solid lighten($navbar-bg, 12%);
 
 				&:hover {
-					background-color: lighten($navbar-bg, 15%);
-
+					color: $navigation-hover-text-color;
 				}
 
 				&.active {
-					background-color: lighten($navbar-bg, 10%);
-
+					color: $navigation-hover-text-color;
 				}
 			}
 		}
@@ -97,8 +99,10 @@ h2.logo {
 @media only screen and (min-width : 904px) {
 
 	.wrap {
-		padding-left: 1em;
-		padding-right: 1em;
+		height: 60px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 
 	.logo {
@@ -120,30 +124,34 @@ h2.logo {
     	color: $navigation-color;
 	}
 	.navbar {
-		float: right;
-		max-height: none;
-		margin-top: 0;
+		height: 60px;
 		overflow-y: hidden;
 
 		.menu {
-			box-shadow: 0 -6px 0 darken($navbar-bg, 10%) inset;
 			li {
 				list-style-type: none;
 				display: inline-block;
 				text-align: center;
+				text-transform: uppercase;
 				&.language-responsive-button {
 					display: none;
 				}
 				a {
 					display: block;
 					border-bottom: 0;
+					height: 60px;
+					display: flex;
+					align-items: center;
+					padding-top: 20px;
+				    padding-bottom: 20px;
+				    font-size: 13px;
 
 					&:hover {
-						box-shadow: 0 -3px 0 $navbar-bg inset;
+						box-shadow: 0 -3px 0 $navigation-hover-text-color inset;
 					}
 
 					&.active {
-						box-shadow: 0 -3px 0 $navbar-bg inset;
+						box-shadow: 0 -3px 0 $navigation-hover-text-color inset;
 					}
 				}
 			}
