--- a/resources/scss/base/_default.scss
+++ b/resources/scss/base/_default.scss
@@ -5,9 +5,13 @@
 	padding: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 html {
 	font-size: 100%;
-	font-family: "Nunito", Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: normal;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
@@ -15,7 +19,7 @@ html {
 
 span {
 	font-size: 100%;
-	font-family: "Nunito", Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: normal;
 }
 a {
