--- a/resources/scss/layouts/_footer.scss
+++ b/resources/scss/layouts/_footer.scss
@@ -1,21 +1,40 @@
-.ui.inverted.vertical.footer.segment{
-    &.custom-footer {
-        @include custom-footer;
-        text-align: center;
-        #copyright {
-            margin-top: 30px;
+footer {
+    position: relative;
+    background-color: $footer-bg;
+    border-top: 1px solid $footer-border;
+    .container {
+        width: 100%;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        color: $footer-color;
+        .row {
+            display: flex;
+            .column {
+                width: 33.3333%;
+                text-align: center;
+                .link {
+                    color: $footer-color;
+                    margin: 0 1em;
+                    &:hover {
+                        color: $download-bg;
+                    }
+                }
+            }
         }
-        .social-container {
-            padding: 20px;
-            .twitter-icon{
-                background-color: $twitter-bg;
-            }
-            a:hover, a:visited, a:link, a:active
-            {
-                text-decoration: none;
-            }
-            i.circular.inverted{
-                margin-right: 10px;
+    }
+}
+
+@media only screen and (max-width : 904px) {
+    footer {
+        .container {
+            .row {
+                display: block;
+                .column {
+                    width: 100%;
+                    margin: 1em 0;
+                }
             }
         }
     }
