--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -642,28 +642,48 @@ a.btn {
   justify-content: center;
 }
 /* line 11, ../scss/modules/_segment.scss */
-.segment.home h2 {
+.segment.home .header {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center center;
+  z-index: 1;
+}
+/* line 19, ../scss/modules/_segment.scss */
+.segment.home .content {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+}
+/* line 28, ../scss/modules/_segment.scss */
+.segment.home .content h2 {
   font-weight: 500;
 }
-/* line 14, ../scss/modules/_segment.scss */
-.segment.home h1 {
+/* line 31, ../scss/modules/_segment.scss */
+.segment.home .content h1 {
   text-transform: uppercase;
   font-size: 3rem;
   letter-spacing: 8px;
 }
-/* line 19, ../scss/modules/_segment.scss */
-.segment.home img.ui.medium.circular.image {
+/* line 36, ../scss/modules/_segment.scss */
+.segment.home .content img.circular.image {
   margin-left: auto;
   margin-right: auto;
   max-width: 180px;
 }
-/* line 24, ../scss/modules/_segment.scss */
-.segment.home .row {
+/* line 41, ../scss/modules/_segment.scss */
+.segment.home .content .row {
   display: flex;
   justify-content: center;
 }
-/* line 27, ../scss/modules/_segment.scss */
-.segment.home .row .link {
+/* line 44, ../scss/modules/_segment.scss */
+.segment.home .content .row .link {
   color: #f5f5f5;
   background-color: rgba(255, 255, 255, 0.05);
   margin: 1em .5em;
@@ -672,70 +692,76 @@ a.btn {
   width: 40px;
   border-radius: 50%;
 }
-/* line 35, ../scss/modules/_segment.scss */
-.segment.home .row .link:hover {
+/* line 52, ../scss/modules/_segment.scss */
+.segment.home .content .row .link:hover {
   background-color: #E25041;
 }
-/* line 38, ../scss/modules/_segment.scss */
-.segment.home .row .link i {
+/* line 55, ../scss/modules/_segment.scss */
+.segment.home .content .row .link i {
   vertical-align: bottom;
 }
-/* line 45, ../scss/modules/_segment.scss */
+/* line 63, ../scss/modules/_segment.scss */
+.segment .point {
+  color: #E25041;
+  font-size: 5rem;
+  line-height: 45px;
+}
+/* line 68, ../scss/modules/_segment.scss */
 .segment .container {
   margin: auto;
 }
-/* line 47, ../scss/modules/_segment.scss */
+/* line 70, ../scss/modules/_segment.scss */
 .segment .container .segment-title {
   font-size: 3rem;
 }
-/* line 51, ../scss/modules/_segment.scss */
+/* line 74, ../scss/modules/_segment.scss */
 .segment .container hr {
   border-color: #E25041;
   border-top: 0;
   max-width: 50px;
   margin: 30px auto;
 }
-/* line 59, ../scss/modules/_segment.scss */
+/* line 82, ../scss/modules/_segment.scss */
 .segment.dark {
   background-color: #191b1d;
   color: #f9f9f9;
 }
-/* line 63, ../scss/modules/_segment.scss */
+/* line 86, ../scss/modules/_segment.scss */
 .segment.light {
   background-color: #f9f9f9;
   color: #191b1d;
 }
 
 @media (min-width: 1200px) {
-  /* line 71, ../scss/modules/_segment.scss */
+  /* line 94, ../scss/modules/_segment.scss */
   .segment .container {
     width: 1170px;
   }
 }
 @media (min-width: 992px) {
-  /* line 78, ../scss/modules/_segment.scss */
+  /* line 101, ../scss/modules/_segment.scss */
   .segment {
     padding: 100px 1em;
   }
-  /* line 80, ../scss/modules/_segment.scss */
+  /* line 103, ../scss/modules/_segment.scss */
   .segment .container {
     max-width: 970px;
   }
 }
 @media only screen and (max-width: 768px) {
-  /* line 87, ../scss/modules/_segment.scss */
+  /* line 110, ../scss/modules/_segment.scss */
   .segment {
     padding: 100px 10px;
   }
-  /* line 90, ../scss/modules/_segment.scss */
+  /* line 113, ../scss/modules/_segment.scss */
   .segment.home h1 {
     font-size: 32px;
   }
-  /* line 93, ../scss/modules/_segment.scss */
+  /* line 116, ../scss/modules/_segment.scss */
   .segment.home h2 {
     font-size: 16px;
   }
-  /* line 98, ../scss/modules/_segment.scss */
+  /* line 121, ../scss/modules/_segment.scss */
   .segment .container .segment-title {
     font-size: 40px;
   }
