--- a/resources/scss/modules/_segment.scss
+++ b/resources/scss/modules/_segment.scss
@@ -8,40 +8,63 @@
         padding: 0;
         flex-direction: column;
         justify-content: center;
-        h2 {
-            font-weight: 500;
+        .header {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            background-size: cover;
+            background-position: center center;
+            z-index: 1;
         }
-        h1 {
-            text-transform: uppercase;
-            font-size: 3rem;
-            letter-spacing: 8px;
-        }
-        img.ui.medium.circular.image {
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 180px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            .link {
-                color: $awesome-white2;
-                background-color: rgba(255, 255, 255, 0.05);
-                margin: 1em .5em;
-                font-size: 20px;
-                height: 40px;
-                width: 40px;
-                border-radius: 50%;
-                &:hover {
-                    background-color: $red;
-                }
-                i {
-                    vertical-align: bottom;
+        .content {
+            position: absolute;
+        	margin: 0;
+        	padding: 0;
+        	text-align: center;
+        	top: 50%;
+        	left: 50%;
+        	-webkit-transform: translate3d(-50%,-50%,0);
+        	transform: translate3d(-50%,-50%,0);
+            h2 {
+                font-weight: 500;
+            }
+            h1 {
+                text-transform: uppercase;
+                font-size: 3rem;
+                letter-spacing: 8px;
+            }
+            img.circular.image {
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 180px;
+            }
+            .row {
+                display: flex;
+                justify-content: center;
+                .link {
+                    color: $awesome-white2;
+                    background-color: rgba(255, 255, 255, 0.05);
+                    margin: 1em .5em;
+                    font-size: 20px;
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 50%;
+                    &:hover {
+                        background-color: $red;
+                    }
+                    i {
+                        vertical-align: bottom;
+                    }
                 }
             }
         }
     }
 
+    .point{
+        color: $red;
+        font-size: 5rem;
+        line-height: 45px;
+    }
     .container {
         margin: auto;
         .segment-title {
