--- a/resources/scss/modules/_segment.scss
+++ b/resources/scss/modules/_segment.scss
@@ -110,11 +110,13 @@
     .segment {
         padding: 100px 10px;
         &.home {
-            h1 {
-                font-size: 32px;
-            }
-            h2 {
-                font-size: 16px;
+            .content {
+                h1 {
+                    font-size: 32px;
+                }
+                h2 {
+                    font-size: 16px;
+                }
             }
         }
         .container {
