--- a/resources/scss/modules/_segment.scss
+++ b/resources/scss/modules/_segment.scss
@@ -20,6 +20,7 @@
             position: absolute;
         	margin: 0;
         	padding: 0;
+            width: 100%;
         	text-align: center;
         	top: 50%;
         	left: 50%;
